Wed Nov 14 12:42:08 UTC 2007  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
          Fixed 2 memory leaks that was happening because the value
          returned by activate_server_i(...) was ignored.

Tue Nov 13 22:27:17 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * tao/TransportCurrent/IIOP_Current_Impl.h:
        * tao/TransportCurrent/IIOP_Current_Impl.cpp:

        Updated comments to reflect the implementation changes in:
        Mon Nov 12 08:54:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

Mon Nov 12 17:54:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/LongUpcalls/run_test.pl:
        * tests/Multiple/run_test.pl:
          Improved for VxWorks

Mon Nov 12 17:44:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/CodeSets/simple/run_test.pl:
          Added support for VxWorks cross platform testing

        * tests/RTCORBA/MT_Client_Protocol_Priority/run_test.pl:
          Simplified this script

Mon Nov 12 13:59:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2174_Regression/run_test.pl:
        * tests/Bug_2183_Regression/run_test.pl:
        * tests/Bug_2234_Regression/run_test.pl:
        * tests/Bug_2328_Regression/run_test.pl:
        * tests/Bug_2804_Regression/run_test.pl:
          Improved VxWorks cross platform testing

Mon Nov 12 13:02:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1361_Regression/run_test.pl:
          Use PerlACE::wait_interval_for_process_creation

Mon Nov 12 11:48:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2289_Regression/run_test.pl:
          Added support for VxWorks cross platform testing

        * tests/Bug_2936_Regression/run_test.pl:
        * tests/Bug_2953_Regression/run_test.pl:
          Simplified these files

Mon Nov 12 09:48:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
